--- a/styles/partials/_header.scss
+++ b/styles/partials/_header.scss
@@ -9,14 +9,7 @@
     width: 100vw;
     display: flex;
     flex-direction: column;
-    @include breakpoints.medium {
-             flex-direction: row;
-             width: 100vw;
-             height: 8vh;
-             align-items: center;
-        }
-    
-
+  
     &__logo-name {
         margin: 1rem 0 0 0;
         text-align: center;
@@ -25,12 +18,13 @@
         line-height: 2rem;
         text-decoration: none;
         color: $white;
+
         @include breakpoints.medium {
             padding-left: 35px;
-                  font-size: 1.8rem;
-                  margin: 0;
+            font-size: 1.8rem;
+            margin: 0;
+        }
     }
-}
 
     &__menu {
         font-size: .875rem;
@@ -40,20 +34,19 @@
         display: flex;
         padding-left: 0;
         justify-content: space-evenly;
-            font-size: 1.5rem;
-            line-height: 2rem;
-            @include breakpoints.medium {
-                        font-size: 2.25rem;
-                        line-height: 2.75rem;
-                        margin: 0;
-                }
-      
+        font-size: 1.5rem;
+        line-height: 2rem;
+    }
+
+    &__navigation {
+        text-align: left;
+
+        @include breakpoints.medium {
+            padding-top: 25px;
+        }
 
     }
-&__navigation {
-   text-align: left;
 
-}
     &__menu-item {
         margin: 0;
         font-size: .875rem;
@@ -64,103 +57,74 @@
         display: inline;
         padding-bottom: 10px;
         width: 50%;
+
         @include breakpoints.medium {
-                font-size: 1.8rem;
-                display: inline-block;
-                justify-content: space-around;
-                margin-left: 30px;
-            }
+            font-size: 1.8rem;
+            display: inline-block;
+            justify-content: space-around;
+            margin-left: 30px;
+            font-weight: 400;
+
+            padding-bottom: 25px;
+
+            font-size: 1.5rem;
+            line-height: 2rem;
+        }
     }
 
 
     &__menu-item--link {
         text-decoration: none;
-        color: $white;
+        color: $mercury;
         width: 100%;
     }
 }
 
-/*
 
-.header__menu-item--link:hover {
-    border-bottom: 0.2rem solid $white;
-    text-decoration: none;
-    text-align: center;
-    color: $white;
-    transition: 0.3s ease;
-    font-weight: 700;
-    @include breakpoints.medium {
-        border-bottom: 0.1rem solid $white;
-        font-size: 1.5rem;
-            line-height: 2rem;
-
-        }
-
+@include breakpoints.medium {
+    .header {
+        flex-direction: row;
+        width: 100vw;
+        align-items: center;
+    }
 }
 
-*/
-
-/*
-
-.header__menu-item--link a {
-border-bottom: 0.1rem solid $white;
-    text-decoration: none;
-    text-align: center;
-    color: $white;
-    transition: 0.3s ease;
-    font-weight: 600;
-    font-size: .875rem;
-    line-height: 1.375rem;
-    padding-bottom: 1.5rem;
-}
-
-*/
 
 .header__menu-item:active {
     border-bottom: 0.1rem solid $white;
-        padding-bottom: 10px;
-        font-weight: 700;
+    padding-bottom: 10px;
+    font-weight: 700;
+    color: $white;
+
+    @include breakpoints.medium {
+        font-weight: 600;
+        font-size: 1.5rem;
+        line-height: 2rem;
+        padding-bottom: 25px;
+    }
 }
 
-.header__menu-item:hover{
+
+.header__menu-item:hover {
     border-bottom: 0.1rem solid $white;
-        font-weight: 700;
-        color: $white;
-        @include breakpoints.medium {
-                padding-bottom: 40px;
-            }
+    font-weight: 700;
+    color: $white;
+
+    @include breakpoints.medium {
+        padding-bottom: 25px;
+        font-weight: 600;
+        font-size: 1.5rem;
+        line-height: 2rem;
+    }
 }
 
 
 .header__menu-item::after {
-    border-bottom: 0.1rem solid $white;
+    border-bottom: 0.1rem solid $mercury;
     padding-bottom: 10px;
     font-weight: 700;
     color: $mercury;
 
 
 }
-
-/*
-
-.active:hover {
-    border-bottom: 0.1rem solid $white;
-    font-weight: 700;
-}
-
-.inactive {
-    color: $mercury;
-    font-weight: 400;
-    font-size: .875rem;
-    line-height: 1.375rem;
-    @include breakpoints.medium {
-    font-weight: 400;
-        font-size: 1.5rem;
-        line-height: 2rem;
-        }
-
-}
-
-*/
-
 
