--- a/styles/partials/_header.scss
+++ b/styles/partials/_header.scss
@@ -57,6 +57,7 @@
         display: inline;
         padding-bottom: 10px;
         width: 50%;
+        color: $white;
 
         @include breakpoints.medium {
             font-size: 1.8rem;
@@ -64,10 +65,8 @@
             justify-content: space-around;
             margin-left: 30px;
             font-weight: 400;
-
             padding-bottom: 25px;
-
-            font-size: 1.5rem;
+            font-size: 1rem;
             line-height: 2rem;
         }
     }
@@ -75,8 +74,8 @@
 
     &__menu-item--link {
         text-decoration: none;
-        color: $mercury;
         width: 100%;
+        color: $mercury;
     }
 }
 
@@ -90,41 +89,33 @@
 }
 
 
-.header__menu-item:active {
+.header__menu-item--link.active {
     border-bottom: 0.1rem solid $white;
     padding-bottom: 10px;
-    font-weight: 700;
+    font-weight: 400;
     color: $white;
 
     @include breakpoints.medium {
-        font-weight: 600;
-        font-size: 1.5rem;
+        font-weight: 400;
+        font-size: 1rem;
         line-height: 2rem;
         padding-bottom: 25px;
+        color: $white;
     }
 }
 
 
 .header__menu-item:hover {
     border-bottom: 0.1rem solid $white;
-    font-weight: 700;
+    font-weight: 600;
     color: $white;
 
     @include breakpoints.medium {
         padding-bottom: 25px;
         font-weight: 600;
-        font-size: 1.5rem;
+        font-size: 1rem;
         line-height: 2rem;
+        color: $white;
     }
-}
-
-
-.header__menu-item::after {
-    border-bottom: 0.1rem solid $mercury;
-    padding-bottom: 10px;
-    font-weight: 700;
-    color: $mercury;
-
-
 }
 
