--- a/styles/shows.css
+++ b/styles/shows.css
@@ -40,20 +40,22 @@
   position: relative;
   color: #000000;
 }
+
 .main__hero--header {
   top: 0;
   left: 0;
   margin: 0;
   position: absolute;
   text-align: left;
-  padding-top: 30%;
-  height: 99.3%;
+  padding-top: 10%;
+  height: 100%;
   right: 0;
+  padding-left: 1.25rem;
   color: #ffffff;
   background: rgba(50, 50, 50, 0.5);
   padding-left: 1rem;
-  font-weight: 700;
-  font-size: 1.5rem;
+  font-weight: 400;
+  font-size: 1rem;
   line-height: 2rem;
 }
 @media only screen and (min-width: 768px) {
@@ -73,6 +75,21 @@
 .main__hero--player {
   z-index: 99;
   position: absolute;
-  top: 50%;
-  left: 33%;
+  width: 100%;
+  height: 7rem;
+  bottom: 20%;
+  text-align: center;
+  padding: 20px;
+}
+.main__hero--content {
+  font-size: 1.5rem;
+  position: absolute;
+  top: 0;
+  left: 1.25rem;
+  margin: 0;
+  position: absolute;
+  text-align: left;
+  padding-top: 20%;
+  color: #ffffff;
+  font-weight: 600;
 }/*# sourceMappingURL=shows.css.map */
