--- a/styles/shows.scss
+++ b/styles/shows.scss
@@ -15,21 +15,24 @@
     margin: 0 auto;
     position: relative;
     color: $dark-black;
+}
 
-&__hero--header {
+.main__hero {
+&--header {
     top: 0;
     left: 0;
     margin: 0;
     position: absolute;
     text-align: left;
-    padding-top: 30%;
-    height: 99.3%;
+    padding-top: 10%;
+    height: 100%;
     right: 0;
+    padding-left: 1.25rem;
     color: $white;
     background: rgb(50, 50, 50, 0.5);
     padding-left: 1rem;
-    font-weight: 700;
-    font-size: 1.5rem;
+    font-weight: 400;
+    font-size: 1rem;
     line-height: 2rem;
 
     @include breakpoints.medium {
@@ -45,10 +48,27 @@
     }
 }
 
-&__hero--player {
+&--player {
     z-index: 99;
     position: absolute;
-    top: 50%;
-    left: 33%;
+    width: 100%;
+    height: 7rem;
+    bottom: 20%;
+    text-align: center;
+    padding: 20px;
+  
+}
+
+&--content{
+    font-size: 1.5rem;
+    position: absolute;
+    top: 0;
+    left: 1.25rem;
+    margin: 0;
+    position: absolute;
+    text-align: left;
+    padding-top: 20%;
+    color: $white;
+    font-weight: 600;
 }
 }
