added js objects for show

--- a/styles/partials/_fonts.scss
+++ b/styles/partials/_fonts.scss
@@ -21,7 +21,7 @@
     font-weight: 400;
     font-style: normal;
 }
-
+/*
 @font-face {
     font-family: "Avenir";
     src: url("../../assets/fonts/Alternative\ files/AvenirNextLTPro-Bold") format("truetype");
@@ -43,3 +43,4 @@
     font-weight: 400;
     font-style: normal;
 }
+*/
