--- a/styles/partials/_footer.scss
+++ b/styles/partials/_footer.scss
@@ -74,9 +74,9 @@
         font-size: .875rem;
         line-height: 1.25rem;
         position: relative;
-    }
+    
 
-    .footer__first {
+    &__first {
         display: flex;
         width: 100%;
         align-items: center;
@@ -85,12 +85,21 @@
 
 
 
-    .footer__first--title {
+    &__first--title {
         width: fit-content;
         font-size: 2rem;
     }
 
+    &__first--icons {
+            margin: 1rem;
+            font-weight: 400;
+            font-size: 2rem;
+            line-height: 1.25rem;
+            padding-left: 1.625rem;
+    
+    }
 
+    }
     .footer__second,
     .footer__third,
     .footer__fourth {
@@ -99,7 +108,8 @@
         margin-left: 2rem;
     }
 
-    .footer__fifth--title {
+    .footer__fifth {
+    &--title {
         position: absolute;
         top: 64px;
         right: 40px;
@@ -109,24 +119,19 @@
 
     }
 
-    .footer__fifth--content {
+    &--content {
         margin-left: 4rem;
         display: inline-block;
         position: absolute;
         bottom: 0;
         left: 0;
-    }
-
-    .footer__first--icons {
-        margin: 1rem;
-        font-weight: 400;
-        font-size: 2rem;
-        line-height: 1.25rem;
-        padding-left: 1.625rem;
-
-    }
+    }  
+}
 }
 
+a{
+    text-decoration: none;
+}
 
 .bold {
     font-weight: 600;
