--- a/styles/partials/_main-content.scss
+++ b/styles/partials/_main-content.scss
@@ -42,10 +42,7 @@
     background-size: cover;
     position: relative;
 }
-}
-
-
-.main__hero--title {
+&__hero--title {
     top: 0;
     left: 0;
     margin: 0;
@@ -74,6 +71,7 @@
     }
 }
 
+}
 
 .center {
     text-align: center;
@@ -85,7 +83,7 @@
     font-weight: 400;
     font-size: .8125rem;
     line-height: 1.125rem;
-    margin: 0 2rem 0 2rem;
+    margin: 0 3rem 0 3rem;
 
     @include breakpoints.medium {
         font-weight: 400;
@@ -215,11 +213,16 @@
 
 }
 
-
+.main__form{
+    display: flex;
+}
 
 .main__form--img {
-border-radius: 50%;
 width: 50px;
-height: 50%;
+    height: 50px;
+    border: 1px solid white;
+    margin-left: 5px;
+    position: relative;
+    border-radius: 50%;
 
 }
