--- a/styles/partials/_main-content.scss
+++ b/styles/partials/_main-content.scss
@@ -71,9 +71,36 @@
             line-height: 4.25rem;
         }
     }
-
 }
 
+.form {
+    margin: 0 auto;
+    display: flex;
+
+    &__left {
+        width: 30%;
+        display: inline-block;
+    }
+
+    &__right {
+        display: inline-block;
+        width: 70%;
+    }
+
+&__img {
+    width: 50px;
+    height: 50px;
+    border: 1px solid white;
+    margin-left: 5px;
+    position: relative;
+    border-radius: 50%;
+}
+
+&__name {
+    width: 80%;
+}
+
+}
 .center {
     text-align: center;
 }
@@ -297,23 +324,7 @@
 
 .form {
 
-    width: 80%;
-    justify-content: center;
-    align-items: center;
-    font-family: "Avenir";
-
-    &__img {
-        width: 50px;
-        height: 50px;
-        border: 1px solid white;
-        margin-left: 5px;
-        position: relative;
-        border-radius: 50%;
-    }
-
-    &__name {
-        width: 80%;
-    }
+    
 }
 
 textarea {
